--- a/recipes/templates/recipes/home.html
+++ b/recipes/templates/recipes/home.html
@@ -15,8 +15,8 @@ Cuisinothèque{% endblock %} {% block content %}
       </p>
 
       <div class="hero-cta" data-anim="cta">
-        <a class="btn btn-primary" href="{% url 'recipe_list' %}">Parcourir les recettes</a>
-        <a class="btn btn-ghost" href="{% url 'recipe_create' %}">Ajouter une recette</a>
+        <a class="btn btn-home-primary" href="{% url 'recipe_list' %}">Parcourir les recettes</a>
+        <a class="btn btn-home-secondary" href="{% url 'recipe_create' %}">Ajouter une recette</a>
       </div>
 
       <div class="hero-metrics" data-anim="metrics" role="list" aria-label="Raccourcis">
