update title page

--- a/recipes/templates/recipes/recipe_form.html
+++ b/recipes/templates/recipes/recipe_form.html
@@ -1,6 +1,6 @@
 {% extends "recipes/base.html" %}
 {% load static %}
-{% block title %}Recettes | Cuisinothèque{% endblock %}
+{% block title %}Ajouter une recette | Cuisinothèque{% endblock %}
 {% block content %}
 <section class="container recipe-form-page">
   <header class="recipe-form-header">
